# ollvm-standalone

./: CMakeLists.txt  README.md  build.sh
cmake/: OLLVMStandalone.cmake
include/: BogusControlFlow.h  CryptoUtils.h  Flattening.h  Split.h  Substitution.h  Utils.h
src/: BogusControlFlow.cpp  CMakeLists.txt  CryptoUtils.cpp  Flattening.cpp  SplitBasicBlocks.cpp  Substitution.cpp  Utils.cpp
tools/: CMakeLists.txt  StaticBogusControlFlow.cpp  StaticFlattening.cpp  StaticSplitBasicBlocks.cpp  StaticSubstitution.cpp
